--- a/style.css
+++ b/style.css
@@ -26,9 +26,7 @@ h1 span{
     font-size: 65px;
 }
 
-.div1{
-    padding: 90px;
-}
+
 #button{
     background-color: rgb(216, 53, 25);
     border-radius: 500px;
@@ -43,48 +41,26 @@ h1 span{
     cursor: pointer;
     text-decoration: none;
 }
-
+#button:hover{
+  font-size: 18px;
+}
 
 
 header{
-    /* padding: 20px; */
+    
     background-color: rgb(0, 0, 0);
     position:sticky;
     top: 0;
-    font-family: 'Montserrat', sans-serif;
+    
 }
-nav{
-    display: flex;
-}
+
 nav div a img{
-    width: 140px;
-    padding: 16px 11px 16px 95px;
+    width: 211px;
+    padding: 12px;
 }
 
-
-
-}
-.logo{
+nav div{
+    justify-content: center;
+    justify-items: center;
     display: flex;
-    align-items: center;
 }
-nav ul{
-   
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 0 0 0 773px;
-}
-nav ul li{
-    list-style: none ;
-    padding: 0 15px;
-}
-nav ul li a{
-    color:rgb(255, 255, 255);
-    text-decoration: none;
-    font-family: 'Montserrat', sans-serif;
-}
-nav ul li a:hover{
-    color: rgb(30, 215, 96);
-    font-size: 17px;
-
